roaring_dart/lib/generated_bindings.dart


  late final _roaring_iteratePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>, roaring_iterator,
              ffi.Pointer<ffi.Void>)>>('roaring_iterate');
  late final _roaring_iterate = _roaring_iteratePtr.asFunction<
      bool Function(ffi.Pointer<roaring_bitmap_t>, roaring_iterator,
          ffi.Pointer<ffi.Void>)>();

  bool roaring_iterate64(
    ffi.Pointer<roaring_bitmap_t> r,
    roaring_iterator64 iterator,
    int high_bits,
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _roaring_iterate64(
      r,
      iterator,
      high_bits,
      ptr,
    );
  }

  late final _roaring_iterate64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>, roaring_iterator64,
              ffi.Uint64, ffi.Pointer<ffi.Void>)>>('roaring_iterate64');
  late final _roaring_iterate64 = _roaring_iterate64Ptr.asFunction<
      bool Function(ffi.Pointer<roaring_bitmap_t>, roaring_iterator64, int,
          ffi.Pointer<ffi.Void>)>();

  /// Return true if the two bitmaps contain the same elements.
  bool roaring_bitmap_equals(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_equals(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_equalsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_equals');
  late final _roaring_bitmap_equals = _roaring_bitmap_equalsPtr.asFunction<
      bool Function(
          ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Return true if all the elements of r1 are also in r2.
  bool roaring_bitmap_is_subset(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_is_subset(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_is_subsetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_is_subset');
  late final _roaring_bitmap_is_subset =
      _roaring_bitmap_is_subsetPtr.asFunction<
          bool Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Return true if all the elements of r1 are also in r2, and r2 is strictly
  /// greater than r1.
  bool roaring_bitmap_is_strict_subset(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_is_strict_subset(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_is_strict_subsetPtr = _lookup<
          ffi.NativeFunction<
              ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_is_strict_subset');
  late final _roaring_bitmap_is_strict_subset =
      _roaring_bitmap_is_strict_subsetPtr.asFunction<
          bool Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// (For expert users who seek high performance.)
  ///
  /// Computes the union between two bitmaps and returns new bitmap. The caller is
  /// responsible for memory management.
  ///
  /// The lazy version defers some computations such as the maintenance of the
  /// cardinality counts. Thus you must call `roaring_bitmap_repair_after_lazy()`
  /// after executing "lazy" computations.
  ///
  /// It is safe to repeatedly call roaring_bitmap_lazy_or_inplace on the result.
  ///
  /// `bitsetconversion` is a flag which determines whether container-container
  /// operations force a bitset conversion.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_lazy_or(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
    bool bitsetconversion,
  ) {
    return _roaring_bitmap_lazy_or(
      r1,
      r2,
      bitsetconversion,
    );
  }

  late final _roaring_bitmap_lazy_orPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>,
              ffi.Bool)>>('roaring_bitmap_lazy_or');
  late final _roaring_bitmap_lazy_or = _roaring_bitmap_lazy_orPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
          ffi.Pointer<roaring_bitmap_t>, bool)>();

  /// (For expert users who seek high performance.)
  ///
  /// Inplace version of roaring_bitmap_lazy_or, modifies r1.
  ///
  /// `bitsetconversion` is a flag which determines whether container-container
  /// operations force a bitset conversion.
  void roaring_bitmap_lazy_or_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
    bool bitsetconversion,
  ) {
    return _roaring_bitmap_lazy_or_inplace(
      r1,
      r2,
      bitsetconversion,
    );
  }

  late final _roaring_bitmap_lazy_or_inplacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>,
              ffi.Bool)>>('roaring_bitmap_lazy_or_inplace');
  late final _roaring_bitmap_lazy_or_inplace =
      _roaring_bitmap_lazy_or_inplacePtr.asFunction<
          void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>, bool)>();

  /// (For expert users who seek high performance.)
  ///
  /// Execute maintenance on a bitmap created from `roaring_bitmap_lazy_or()`
  /// or modified with `roaring_bitmap_lazy_or_inplace()`.
  void roaring_bitmap_repair_after_lazy(
    ffi.Pointer<roaring_bitmap_t> r1,
  ) {
    return _roaring_bitmap_repair_after_lazy(
      r1,
    );
  }

  late final _roaring_bitmap_repair_after_lazyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_repair_after_lazy');
  late final _roaring_bitmap_repair_after_lazy =
      _roaring_bitmap_repair_after_lazyPtr
          .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Computes the symmetric difference between two bitmaps and returns new bitmap.
  /// The caller is responsible for memory management.
  ///
  /// The lazy version defers some computations such as the maintenance of the
  /// cardinality counts. Thus you must call `roaring_bitmap_repair_after_lazy()`
  /// after executing "lazy" computations.
  ///
  /// It is safe to repeatedly call `roaring_bitmap_lazy_xor_inplace()` on
  /// the result.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_lazy_xor(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_lazy_xor(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_lazy_xorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_lazy_xor');
  late final _roaring_bitmap_lazy_xor = _roaring_bitmap_lazy_xorPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// (For expert users who seek high performance.)
  ///
  /// Inplace version of roaring_bitmap_lazy_xor, modifies r1. r1 != r2
  void roaring_bitmap_lazy_xor_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_lazy_xor_inplace(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_lazy_xor_inplacePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_lazy_xor_inplace');
  late final _roaring_bitmap_lazy_xor_inplace =
      _roaring_bitmap_lazy_xor_inplacePtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Compute the negation of the bitmap in the interval [range_start, range_end).
  /// The number of negated values is range_end - range_start.
  /// Areas outside the range are passed through unchanged.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_flip(
    ffi.Pointer<roaring_bitmap_t> r1,
    int range_start,
    int range_end,
  ) {
    return _roaring_bitmap_flip(
      r1,
      range_start,
      range_end,
    );
  }

  late final _roaring_bitmap_flipPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint64, ffi.Uint64)>>('roaring_bitmap_flip');
  late final _roaring_bitmap_flip = _roaring_bitmap_flipPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// compute (in place) the negation of the roaring bitmap within a specified
  /// interval: [range_start, range_end). The number of negated values is
  /// range_end - range_start.
  /// Areas outside the range are passed through unchanged.
  void roaring_bitmap_flip_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    int range_start,
    int range_end,
  ) {
    return _roaring_bitmap_flip_inplace(
      r1,
      range_start,
      range_end,
    );
  }

  late final _roaring_bitmap_flip_inplacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint64,
              ffi.Uint64)>>('roaring_bitmap_flip_inplace');
  late final _roaring_bitmap_flip_inplace = _roaring_bitmap_flip_inplacePtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Selects the element at index 'rank' where the smallest element is at index 0.
  /// If the size of the roaring bitmap is strictly greater than rank, then this
  /// function returns true and sets element to the element of given rank.
  /// Otherwise, it returns false.
  bool roaring_bitmap_select(
    ffi.Pointer<roaring_bitmap_t> r,
    int rank,
    ffi.Pointer<ffi.Uint32> element,
  ) {
    return _roaring_bitmap_select(
      r,
      rank,
      element,
    );
  }

  late final _roaring_bitmap_selectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint32,
              ffi.Pointer<ffi.Uint32>)>>('roaring_bitmap_select');
  late final _roaring_bitmap_select = _roaring_bitmap_selectPtr.asFunction<
      bool Function(
          ffi.Pointer<roaring_bitmap_t>, int, ffi.Pointer<ffi.Uint32>)>();

  /// roaring_bitmap_rank returns the number of integers that are smaller or equal
  /// to x. Thus if x is the first element, this function will return 1. If
  /// x is smaller than the smallest element, this function will return 0.
  ///
  /// The indexing convention differs between roaring_bitmap_select and
  /// roaring_bitmap_rank: roaring_bitmap_select refers to the smallest value
  /// as having index 0, whereas roaring_bitmap_rank returns 1 when ranking
  /// the smallest value.
  int roaring_bitmap_rank(
    ffi.Pointer<roaring_bitmap_t> r,
    int x,
  ) {
    return _roaring_bitmap_rank(
      r,
      x,
    );
  }

  late final _roaring_bitmap_rankPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_rank');
  late final _roaring_bitmap_rank = _roaring_bitmap_rankPtr
      .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Returns the index of x in the given roaring bitmap.
  /// If the roaring bitmap doesn't contain x , this function will return -1.
  /// The difference with rank function is that this function will return -1 when x
  /// is not the element of roaring bitmap, but the rank function will return a
  /// non-negative number.
  int roaring_bitmap_get_index(
    ffi.Pointer<roaring_bitmap_t> r,
    int x,
  ) {
    return _roaring_bitmap_get_index(
      r,
      x,
    );
  }
